--- a/.github/workflows/lambda-deploy.yaml
+++ b/.github/workflows/lambda-deploy.yaml
@@ -7,6 +7,7 @@ on:
       - main
     paths:
       - 'lambda/'
+  workflow_dispatch: # Enables manual triggers
 
 jobs:
   deploy-lambda: # name of our job
