--- a/.github/workflows/lambda-deploy.yaml
+++ b/.github/workflows/lambda-deploy.yaml
@@ -7,7 +7,6 @@ on:
       - main
     paths:
       - 'lambda/'
-  workflow_dispatch: # Enables manual triggers
 
 jobs:
   deploy-lambda: # name of our job
@@ -21,7 +20,7 @@ jobs:
 
       - name: Install Dependencies # Installs any packages
         run:
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip &&
           pip install -r lambda/requirements.txt -t lambda/
         
       - name: Configure AWS Creds # Sets up our AWS credentials
