--- a/.github/workflows/lambda-deploy.yaml
+++ b/.github/workflows/lambda-deploy.yaml
@@ -28,7 +28,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-          aws-access-secret-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           aws-region: eu-central-1
 
       - name: Deploy Lambda Function #Zips lambda directory and updates lambda function
