--- a/.github/workflows/lambda-deploy.yaml
+++ b/.github/workflows/lambda-deploy.yaml
@@ -35,5 +35,5 @@ jobs:
         run: |
           cd lambda
           zip -r lambda.zip . 
-          aws lambda update-function-code --function-name my-test-cicd-lambda --zip-file file://lambda.zip
+          aws lambda update-function-code --function-name my-test-cicd-lambda --zip-file fileb://lambda.zip
 
