--- a/cloudformation/s3-bucket.yml
+++ b/cloudformation/s3-bucket.yml
@@ -19,6 +19,8 @@ Resources:
     Tags:
       - Key: Environment
         Value: !Ref Environment
+      - Key: Environment
+        Value: GithubActionsTesting
 
 Outputs:
   BucketName:
