--- a/.github/workflows/cfn-validate-pr.yaml
+++ b/.github/workflows/cfn-validate-pr.yaml
@@ -24,12 +24,21 @@ jobs:
       - name: Validate CloudFormation template
         run: |
           aws cloudformation validate-template --template-body file://cloudformation/s3-bucket.yml
-        
+
       - name: Deploy our stack
         run: |
-          stack_name="pr-test-stack-${{github.event.pull_request.number}}"
-          aws cloudformation create-stack --stack-name $stack_name --template-body file://cloudformation/s3-bucket.yml --parameters ParameterKey=Environment,ParameterValue=test
-      
+          stack_name="pr-test-stack-${{ github.event.pull_request.number }}"
+          if aws cloudformation describe-stacks --stack-name $stack_name > /dev/null 2>&1; then
+            echo "Stack $stack_name already exists. Skipping creation."
+          else
+            echo "Creating stack: $stack_name"
+            aws cloudformation create-stack \
+              --stack-name $stack_name \
+              --template-body file://cloudformation/s3-bucket.yml \
+              --parameters ParameterKey=Environment,ParameterValue=test \
+              --capabilities CAPABILITY_NAMED_IAM
+          fi
+   
       - name: Comment on the PR
         uses: actions/github-script@v6
         with:
