--- a/.github/workflows/cfn-validate-pr.yaml
+++ b/.github/workflows/cfn-validate-pr.yaml
@@ -2,6 +2,9 @@ name: 'Validate CloudFormation on PR'
 
 on:
   pull_request:
+    types:
+      - opened
+      - closed
     paths:
       - 'cloudformation/**'
 
@@ -19,7 +22,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-2
+          aws-region: eu-central-1
 
       - name: Validate CloudFormation template
         run: |
@@ -56,12 +59,15 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true
     steps:
+      - name: Debug Context
+        run: echo "${{ toJson(github.event) }}"
+
       - name: configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-2
+          aws-region: eu-central-1
 
       - name: Delete Test Stack
         run: |
