--- a/cloudformation/s3-bucket.yml
+++ b/cloudformation/s3-bucket.yml
@@ -20,7 +20,7 @@ Resources:
         - Key: Environment
           Value: !Ref Environment
         - Key: Environment
-          Value: TEST
+          Value: MAKIMA
 
 Outputs:
   BucketName:
